=======
HISTORY
=======

1.1rc13 (Unreleased)
--------------------

- Fix issue when handling images with apostrophes in the title. Fixes
  http://dev.plone.org/plone/ticket/10500
  [davisagli]

- Don't live search in the image and link popups until the search text is at
  least 3 characters long. Fixes http://dev.plone.org/plone/ticket/10458.
  [davisagli]

- Get the portal_url and navigation_root_url in a more sane fashion.
  Fixes https://dev.plone.org/plone/ticket/10423.
  [davisagli]

- Make sure paragraphs without a CSS class show up as "Normal paragraph"
  in the styles menu. Fixes http://dev.plone.org/plone/ticket/10532.
  [davisagli]

- Avoid unneeded imports.
  [hannosch]

- Made toolbar background transparent and made padding symmetrical.
  [limi]

1.1rc12 (2010-06-03)
--------------------

- Remove tabindex deprecated html attribute
  [edegoute]

- Fixed some i18n bugs (#10339, #9637).
  [dmunicio]

- Added Spanish translations for plone.tinymce domain
  [dmunicio]

- Updated to upstream translations. Added Georgian (ka) language.
  [vincentfretin]

1.1rc11 (2010-05-01)
--------------------

- Fix regression in handling of resolveuid links that don't include an anchor.
  [davisagli]

- Include a copy of resolveuid.py so that links by UID can be resolved even
  when kupu is not installed and the transform is not applied (such as when
  inserting images in the first place).
  [davisagli]

- Prefer xml.etree over elementtree.
  [hannosch]

- Fixed test failure and avoid bare try/except statements related to portal
  factory and the save button.
  [hannosch]

1.1rc10 (2010-03-09)
--------------------

- Upgrade to TinyMCE 3.2.7.
  [robgietema]

- Fixed fullscreen mode, ticket #10080.
  [robgietema]

- Fixed search with Virtual Hosting, ticket #10308.
  [robgietema]

- Specified empty value and title attributes in searchreplace.htm.pt
  and template.htm.pt to make i18ndude happy.
  [vincentfretin]

- Added and updated languages from upstream.